Fixed resizing issue in the Header component with the BackButton and the logo being misaligned on smaller screen sizes.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@
   }
 
   #logo {
+    display: flex;
     font-weight: 600;
   }
 
